--- a/Accueil.html
+++ b/Accueil.html
@@ -28,7 +28,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -63,8 +63,10 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header> 
-    <section class="u-clearfix u-image u-section-1" id="sec-9249">
+      </div><style class="u-sticky-style" data-style-id="6268">.u-sticky-fixed.u-sticky-6268:before, .u-body.u-sticky-fixed .u-sticky-6268:before {
+borders: top right bottom left !important
+}</style></header> 
+    <section class="u-clearfix u-image u-shading u-section-1" id="sec-9249" data-image-width="1600" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img src="images/Logo-Blanc.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362" data-href="Accueil.html" data-page-id="210181073">
         <div class="u-align-left u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-group-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
@@ -76,13 +78,13 @@
               </a>
               <a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-icon u-social-twitter u-text-white u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5fe4"></use></svg><svg class="u-svg-content" viewBox="0 0 112.2 112.2" x="0px" y="0px" id="svg-5fe4" style=""><path d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2 c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7 c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2 c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5 c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z"></path></svg></span>
               </a>
-              <a class="u-social-url" target="_blank" href="https://www.instagram.com/seed.your.lungs/" title="Instagram"><span class="u-icon u-icon-circle u-social-icon u-social-instagram u-text-white u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e5c8"></use></svg><svg class="u-svg-content" viewBox="0 0 112.2 112.2" x="0px" y="0px" id="svg-e5c8" style=""><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
+              <a class="u-social-url" target="_blank" href="https://www.instagram.com/seedyourlungs/" title="Instagram"><span class="u-icon u-icon-circle u-social-icon u-social-instagram u-text-white u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e5c8"></use></svg><svg class="u-svg-content" viewBox="0 0 112.2 112.2" x="0px" y="0px" id="svg-e5c8" style=""><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
               </a>
               <a class="u-social-url" target="_blank" data-type="Email" title="Email" href="mailto:seedyourlungs.trekk@gmail.com"><span class="u-icon u-icon-circle u-social-email u-social-icon u-text-white u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8fe2"></use></svg><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" id="svg-8fe2" style="enable-background:new 0 0 512 512;"><g><g><path d="M467,61H45C20.218,61,0,81.196,0,106v300c0,24.72,20.128,45,45,45h422c24.72,0,45-20.128,45-45V106    C512,81.28,491.872,61,467,61z M460.786,91L256.954,294.833L51.359,91H460.786z M30,399.788V112.069l144.479,143.24L30,399.788z     M51.213,421l144.57-144.57l50.657,50.222c5.864,5.814,15.327,5.795,21.167-0.046L317,277.213L460.787,421H51.213z M482,399.787    L338.213,256L482,112.212V399.787z"></path>
 </g>
 </g></svg></span>
               </a>
-              <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href=""><span class="u-icon u-icon-circle u-social-icon u-social-youtube u-text-white u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 24 24" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-2bfc"></use></svg><svg class="u-svg-content" viewBox="0 0 24 24" id="svg-2bfc"><path d="m23.469 5.929.03.196c-.29-1.029-1.073-1.823-2.068-2.112l-.021-.005c-1.871-.508-9.4-.508-9.4-.508s-7.51-.01-9.4.508c-1.014.294-1.798 1.088-2.083 2.096l-.005.021c-.699 3.651-.704 8.038.031 11.947l-.031-.198c.29 1.029 1.073 1.823 2.068 2.112l.021.005c1.869.509 9.4.509 9.4.509s7.509 0 9.4-.509c1.015-.294 1.799-1.088 2.084-2.096l.005-.021c.318-1.698.5-3.652.5-5.648 0-.073 0-.147-.001-.221.001-.068.001-.149.001-.23 0-1.997-.182-3.951-.531-5.846zm-13.861 9.722v-7.293l6.266 3.652z"></path></svg></span>
+              <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/watch?v=F8PQrzI9hnI&amp;t=1s"><span class="u-icon u-icon-circle u-social-icon u-social-youtube u-text-white u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 24 24" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-2bfc"></use></svg><svg class="u-svg-content" viewBox="0 0 24 24" id="svg-2bfc"><path d="m23.469 5.929.03.196c-.29-1.029-1.073-1.823-2.068-2.112l-.021-.005c-1.871-.508-9.4-.508-9.4-.508s-7.51-.01-9.4.508c-1.014.294-1.798 1.088-2.083 2.096l-.005.021c-.699 3.651-.704 8.038.031 11.947l-.031-.198c.29 1.029 1.073 1.823 2.068 2.112l.021.005c1.869.509 9.4.509 9.4.509s7.509 0 9.4-.509c1.015-.294 1.799-1.088 2.084-2.096l.005-.021c.318-1.698.5-3.652.5-5.648 0-.073 0-.147-.001-.221.001-.068.001-.149.001-.23 0-1.997-.182-3.951-.531-5.846zm-13.861 9.722v-7.293l6.266 3.652z"></path></svg></span>
               </a>
               <a class="u-social-url" target="_blank" data-type="LinkedIn" title="LinkedIn" href=""><span class="u-icon u-icon-circle u-social-icon u-social-linkedin u-text-white u-icon-6"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1e8e"></use></svg><svg class="u-svg-content" viewBox="0 0 512 512" id="svg-1e8e"><path d="m475.074219 0h-438.148438c-20.394531 0-36.925781 16.53125-36.925781 36.925781v438.148438c0 20.394531 16.53125 36.925781 36.925781 36.925781h438.148438c20.394531 0 36.925781-16.53125 36.925781-36.925781v-438.148438c0-20.394531-16.53125-36.925781-36.925781-36.925781zm-293.464844 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0"></path></svg></span>
               </a>
@@ -98,36 +100,36 @@
             <div class="u-layout-row">
               <div class="u-size-20 u-size-30-md">
                 <div class="u-layout-col">
-                  <div class="u-container-style u-image u-layout-cell u-left-cell u-shading u-size-30 u-image-1">
+                  <div class="u-container-style u-image u-layout-cell u-left-cell u-shading u-size-30 u-image-1" data-image-width="900" data-image-height="1600">
                     <div class="u-container-layout u-container-layout-1">
                       <h3 class="u-custom-font u-font-montserrat u-text u-text-1">TROUVEZ VOTRE CHEMIN</h3>
                       <p class="u-custom-font u-font-montserrat u-text u-text-2">"La seule carte nous aidant à trouver notre chemin dans le labyrinthe de la vie, est à l'intérieur de nous." L'agence TREKK MMI</p>
                     </div>
                   </div>
-                  <div class="u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-2">
+                  <div class="u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-2" data-image-width="1599" data-image-height="777">
                     <div class="u-container-layout"></div>
                   </div>
                 </div>
               </div>
               <div class="u-size-20 u-size-30-md">
                 <div class="u-layout-col">
-                  <div class="u-container-style u-image u-layout-cell u-size-20 u-image-3">
+                  <div class="u-container-style u-image u-layout-cell u-size-20 u-image-3" data-image-width="1600" data-image-height="1200">
                     <div class="u-container-layout"></div>
                   </div>
-                  <div class="u-container-style u-image u-layout-cell u-size-20 u-image-4">
+                  <div class="u-container-style u-image u-layout-cell u-size-20 u-image-4" data-image-width="1200" data-image-height="1600">
                     <div class="u-container-layout"></div>
                   </div>
-                  <div class="u-container-style u-image u-layout-cell u-size-20 u-image-5">
+                  <div class="u-container-style u-image u-layout-cell u-size-20 u-image-5" data-image-width="1599" data-image-height="777">
                     <div class="u-container-layout"></div>
                   </div>
                 </div>
               </div>
               <div class="u-size-20 u-size-60-md">
                 <div class="u-layout-col">
-                  <div class="u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-6">
+                  <div class="u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-6" data-image-width="1599" data-image-height="777">
                     <div class="u-container-layout"></div>
                   </div>
-                  <div class="u-container-style u-image u-layout-cell u-right-cell u-shading u-size-30 u-image-7">
+                  <div class="u-container-style u-image u-layout-cell u-right-cell u-shading u-size-30 u-image-7" data-image-width="1200" data-image-height="1600">
                     <div class="u-container-layout u-valign-bottom">
                       <h3 class="u-custom-font u-font-montserrat u-text u-text-3">RANDONNÉE</h3>
                       <p class="u-custom-font u-font-montserrat u-text u-text-4">"L'Homme se doit d'être le gardien de la Nature, non son propriétaire" Philippe Saint-Marc</p>
@@ -140,7 +142,7 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-image u-shading u-section-3" id="sec-8ad9">
+    <section class="u-clearfix u-image u-shading u-section-3" id="sec-8ad9" data-image-width="1600" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
@@ -174,7 +176,7 @@
                   <a class="u-post-header-link" href="blog/jour-5-04032022.html"><!--blog_post_header_content-->Jour 5 - 04/03/2022<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/jour-5-04032022.html"><!--blog_post_image-->
-                  <img src="images/2.jpeg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1"><!--/blog_post_image-->
+                  <img src="images/j5.JPG" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Le voilà, le dernier réveil de la semaine, la nuit a été plutôt bonne pour tout le monde, on est maintenant habitué ;) Pour le petit déjeuner, on sort tout ce qui nous reste, barres de céréales, pim’s, abricots secs et on mange. La météo n’était pas avec ...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -185,7 +187,7 @@
                   <a class="u-post-header-link" href="blog/jour-4-03032022.html"><!--blog_post_header_content-->Jour 4 - 03/03/2022<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/jour-4-03032022.html"><!--blog_post_image-->
-                  <img src="images/2.jpeg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
+                  <img src="images/j42.jpeg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Cette 4ème et dernière journée de marche commence tranquillement avec un petit déjeuner barres de céréales puis on fait le plein d’eau et on part en direction du Puy de Cômes, le premier objectif de la journée.&nbsp;Après 2h30 de marche dans la boue et des dou...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -196,7 +198,7 @@
                   <a class="u-post-header-link" href="blog/jour-3-02032022.html"><!--blog_post_header_content-->Jour 3 - 02/03/2022<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/jour-3-02032022.html"><!--blog_post_image-->
-                  <img src="images/unnamed1.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
+                  <img src="images/j33.JPG" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->La 2e nuit se passe très bien, même mieux que la 1er pour certain, on commence à s’habituer à la température et à l’environnement. Après un petit déjeuner brioche, chocolat et une discussion avec un voisin, on repart en direction de Olby. La matinée est p...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -269,14 +271,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                           <a href="Galerie.html" data-page-id="2279427053" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-2">voir la galerie</a>
                         </div>
                       </div>
-                      <div class="u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="1001" data-image-height="1500">
+                      <div class="u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="1600" data-image-height="1200">
                         <div class="u-container-layout u-container-layout-2"></div>
                       </div>
                     </div>
                   </div>
                   <div class="u-size-40">
                     <div class="u-layout-row">
-                      <div class="u-container-style u-image u-layout-cell u-size-60 u-image-2" data-image-width="562" data-image-height="750">
+                      <div class="u-container-style u-image u-layout-cell u-size-60 u-image-2" data-image-width="1600" data-image-height="1200">
                         <div class="u-container-layout u-container-layout-3"></div>
                       </div>
                     </div>
@@ -285,7 +287,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               </div>
               <div class="u-size-24 u-size-60-md">
                 <div class="u-layout-col">
-                  <div class="u-container-style u-image u-layout-cell u-size-60 u-image-3" data-image-width="1000" data-image-height="1500">
+                  <div class="u-container-style u-image u-layout-cell u-size-60 u-image-3" data-image-width="1600" data-image-height="1200">
                     <div class="u-container-layout u-container-layout-4"></div>
                   </div>
                 </div>
