--- a/Blog.html
+++ b/Blog.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -59,7 +59,9 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header>
+      </div><style class="u-sticky-style" data-style-id="6268">.u-sticky-fixed.u-sticky-6268:before, .u-body.u-sticky-fixed .u-sticky-6268:before {
+borders: top right bottom left !important
+}</style></header>
     <section class="u-clearfix u-section-1" id="sec-6fa1">
       <div class="u-clearfix u-sheet u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
         <div class="u-blog u-expanded-width u-blog-1">
@@ -70,7 +72,7 @@
                   <a class="u-post-header-link" href="blog/jour-5-04032022.html"><!--blog_post_header_content-->Jour 5 - 04/03/2022<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/jour-5-04032022.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="images/2.jpeg"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="images/j5.JPG"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-custom-font u-font-montserrat u-post-content u-text u-text-2"><!--blog_post_content_content-->Le voilà, le dernier réveil de la semaine, la nuit a été plutôt bonne pour tout le monde, on est maintenant habitué ;) Pour le petit déjeuner, on sort tout ce qui nous reste, barres de céréales, pim’s, abricots secs et on mange. La météo n’était pas avec ...<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                 <a href="blog/jour-5-04032022.html" class="u-blog-control u-border-none u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-btn-1"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Lire plus","defaultValue":"Lire la suite"}--><!--/options_json-->Lire plus<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
@@ -82,7 +84,7 @@
                   <a class="u-post-header-link" href="blog/jour-4-03032022.html"><!--blog_post_header_content-->Jour 4 - 03/03/2022<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/jour-4-03032022.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="images/2.jpeg"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="images/j42.jpeg"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-custom-font u-font-montserrat u-post-content u-text u-text-4"><!--blog_post_content_content-->Cette 4ème et dernière journée de marche commence tranquillement avec un petit déjeuner barres de céréales puis on fait le plein d’eau et on part en direction du Puy de Cômes, le premier objectif de la journée.&nbsp;Après 2h30 de marche dans la boue et des dou...<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                 <a href="blog/jour-4-03032022.html" class="u-blog-control u-border-none u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-btn-2"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Lire plus","defaultValue":"Lire la suite"}--><!--/options_json-->Lire plus<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
@@ -94,7 +96,7 @@
                   <a class="u-post-header-link" href="blog/jour-3-02032022.html"><!--blog_post_header_content-->Jour 3 - 02/03/2022<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/jour-3-02032022.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3" src="images/unnamed1.jpg"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3" src="images/j33.JPG"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-custom-font u-font-montserrat u-post-content u-text u-text-6"><!--blog_post_content_content-->La 2e nuit se passe très bien, même mieux que la 1er pour certain, on commence à s’habituer à la température et à l’environnement. Après un petit déjeuner brioche, chocolat et une discussion avec un voisin, on repart en direction de Olby. La matinée est p...<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                 <a href="blog/jour-3-02032022.html" class="u-blog-control u-border-none u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-btn-3"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"Lire plus","defaultValue":"Lire la suite"}--><!--/options_json-->Lire plus<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
