--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -59,16 +59,18 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header>
+      </div><style class="u-sticky-style" data-style-id="6268">.u-sticky-fixed.u-sticky-6268:before, .u-body.u-sticky-fixed .u-sticky-6268:before {
+borders: top right bottom left !important
+}</style></header>
     <section class="u-clearfix u-white u-section-1" id="carousel_20dd">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-left-cell u-size-20 u-layout-cell-1">
-                <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">NOUS CONTACTER</h2>
-                  <p class="u-text u-text-2">Suo versantur in versantur amici reperiuntur recte quam difficiles reque difficillime inventu videntur plerisque difficillime.</p>
+                <div class="u-container-layout u-container-layout-1">
+                  <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-1">CONTACTEZ-NOUS</h2>
+                  <p class="u-custom-font u-font-montserrat u-text u-text-2"> Des demandes, des questions, de simples remarques, nous répondrons à tout !</p>
                   <div class="u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="slideIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Down">
                     <a class="u-social-url" target="_blank" href=""><span class="u-icon u-icon-circle u-social-facebook u-social-icon u-text-white u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-0860"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-0860" class="u-svg-content"><path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
                     </a>
@@ -85,7 +87,7 @@
                   </div>
                 </div>
               </div>
-              <div class="u-container-style u-image u-layout-cell u-size-20 u-image-1" data-image-width="1600" data-image-height="1067">
+              <div class="u-container-style u-image u-layout-cell u-size-20 u-image-1" data-image-width="900" data-image-height="1600">
                 <div class="u-container-layout u-container-layout-2"></div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-3">
