--- a/Le-projet-SYL.html
+++ b/Le-projet-SYL.html
@@ -29,7 +29,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -64,8 +64,10 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header>
-    <section class="u-clearfix u-image u-section-1" id="sec-96dc" data-image-width="1600" data-image-height="1067">
+      </div><style class="u-sticky-style" data-style-id="6268">.u-sticky-fixed.u-sticky-6268:before, .u-body.u-sticky-fixed .u-sticky-6268:before {
+borders: top right bottom left !important
+}</style></header>
+    <section class="u-clearfix u-image u-section-1" id="sec-96dc" data-image-width="1600" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
     </section>
     <section class="u-clearfix u-white u-section-2" id="sec-61c1">
